# Multimodal-AI-Therepist

./: .gitignore  frontend.py  main.py  pyproject.toml
backend/: config.py  main.py
