[project]
name = "multimodal-ai-therepist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.32",
    "langgraph>=0.6.6",
    "ollama>=0.5.3",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "streamlit>=1.48.1",
    "twilio>=9.8.0",
    "uvicorn>=0.35.0",
]
